src/objects/BTC_SETTINGS__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>API_URL__c</fullName>
        <label>API url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Client_Id__c</fullName>
        <label>Client Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <label>Client Secret</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Security_Token__c</fullName>
        <label>Security Token</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WEBAPP_URL__c</fullName>
        <label>WebApp URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <label>BTC Mobile</label>
</CustomObject>